--- a/src/App.css
+++ b/src/App.css
@@ -5,4 +5,65 @@
   justify-content: center;
   align-items: center;
   border-top: 3px solid #19549C;
+  position: relative;
+}
+
+
+.app-container{
+  width: 100%;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #FFFFFF;
+}
+
+.message{
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  z-index: 9999999;
+  width: 60px;
+  height: 60px;
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.message-icon{
+  width: 60px;
+  height: 60px;
+  transition: all 1s ease;
+}
+
+.message-icon:hover{
+  transform: scale(1.3);
+}
+.mess-content{
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  font-size: 25px;
+  color: #333;
+}
+
+.pop-up-mess{
+  width: 200px;
+  height: 45px;
+  border-radius: 5px;
+  position: absolute;
+  right: 10px;
+  bottom: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: bold;
+  background-color: white;
+  transform: translateX(120%);
+  transition: all 1s ease;
+}
+
+.message:hover .pop-up-mess{
+  transform: translateX(0);
 }
