--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -24,7 +24,7 @@
         justify-content: center;
         flex-direction: column;
         align-items: center;
-        font-weight: 700;
+        font-weight: 400;
         font-size: 25px;
         left: 50%;
         top: 50px;
@@ -33,7 +33,7 @@
             width: 220px;
             height: 55px;
             border: none;
-            background-color: orangered;
+            background-color: blue;
             margin-top: 20px;
             font-weight: bold;
             font-size: 20px;
@@ -41,7 +41,11 @@
             border-radius: 5px;
             color: white;
             &:hover{
-                background-color: rgba(255, 68, 0, 0.743);
+                background-color: rgb(33, 33, 202);
+            }
+            a{
+                color: white;
+                text-decoration: none;
             }
         }
     }
