--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,3 +1,16 @@
 .footer-container{
-    
+    width: 100%;
+    height: max-content;
+    background-color: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .footer-item{
+        width: 1300px;
+        display: flex;
+        align-items: center;
+        min-height: 300px;
+        color: white;
+    }
 }
