--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,117 +1,180 @@
-
 @import "../../scss/button";
 
-.header-container{
+.header-container {
+  width: 100%;
+  height: max-content;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  z-index: 9999999;
+  background-color: #fff;
+  .hot-line {
+    font-weight: 600;
+    text-decoration: underline;
+    color: orangered;
+  }
+  .header-top-left {
+    flex: 1;
+    h1 {
+      color: #19549c;
+      cursor: pointer;
+      font-weight: 400;
+    }
+  }
+  .header-top {
+    width: 1300px;
+    display: flex;
+    justify-content: space-between;
+    height: max-content;
+    padding: 10px;
+    .link {
+      font-weight: 600;
+      &:hover {
+        color: blue;
+      }
+    }
+  }
+  .header-top-right {
+    
+    flex: 2;
+    .header-btn-login-link {
+      position: relative;
+      z-index: 99999999;
+    }
+
+    .header-login-form {
+      width: 300px;
+      height: auto;
+      border-radius: 5px;
+      position: absolute;
+      transform: translateX(-72%);
+      margin-top: 20px;
+      z-index: 9999999;
+      background-color: #ffff;
+      box-shadow: 4px 7px 20px 18px rgba(43, 153, 232, 0.67);
+      -webkit-box-shadow: 4px 7px 20px 18px rgba(43, 153, 232, 0.67);
+      -moz-box-shadow: 4px 7px 20px 18px rgba(43, 153, 232, 0.67);
+      form {
+        width: 100%;
+        height: auto;
+        padding: 10px;
+        .no-account-link{
+            color: red;
+            text-decoration: underline;
+            cursor: pointer;
+        }
+        .email-input,
+        .password-input {
+          display: flex;
+          flex-direction: column;
+          input {
+            width: 100%;
+            height: 40px;
+            outline: none;
+            border-radius: 5px;
+            padding-left: 10px;
+            border: 0.5px solid rgba(128, 128, 128, 0.387);
+            &:focus{
+                border: 1px solid blue;
+            }
+        }
+        }
+
+        .login-btn {
+          width: 220px;
+          height: 45px;
+          margin-top: 20px;
+          button {
+            border-radius: 5px;
+            font-size: 20px;
+            height: 40px;
+            width: 50%;
+            cursor: pointer;
+            border: none;
+            background-color: rgba(0, 0, 255, 0.819);
+            color: white;
+            &:hover{
+                background-color: rgba(0, 0, 255, 0.536);
+            }
+          }
+        }
+      }
+    }
+
+    ul {
+      display: flex;
+      align-items: center;
+      height: 100%;
+      width: 100%;
+      justify-content: space-between;
+    }
+
+    .header-btn-login {
+      @extend .header-btn;
+      background-color: rgb(43, 43, 136);
+      .link {
+        color: white;
+        font-weight: bold;
+      }
+      &:hover {
+        background-color: rgb(63, 63, 150);
+      }
+    }
+
+    .header-btn-register {
+      @extend .header-btn;
+      background-color: rgb(186, 64, 19);
+      .link {
+        color: white;
+        font-weight: bold;
+      }
+
+      &:hover {
+        background-color: rgb(194, 91, 54);
+      }
+    }
+  }
+
+  .header-body {
     width: 100%;
     height: max-content;
+    background-color: #f2f3f3;
+    margin-top: 10px;
+    border-radius: 5px;
     display: flex;
-    flex-direction: column;
+    justify-content: center;
     align-items: center;
-    position: fixed;
-    top: 0;
-    z-index: 5;
-    background-color: #FFF;
-    .hot-line{
-        font-weight: 600;
-        text-decoration: underline;
-        color: orangered;
-    }
-    .header-top-left{
-        flex: 1;
-        h1{
-            color: #19549C;
-            cursor: pointer;
-            font-weight: 400;
-        }
-    }
-    .header-top{
+    form {
+      display: flex;
+      width: 1310px;
+      height: max-content;
+      justify-content: space-between;
+      align-items: center;
+      position: relative;
+      padding: 5px;
+      border-radius: 5px;
+      input {
         width: 1300px;
-        display: flex;
-        justify-content: space-between;
-        height: max-content;
+        height: 45px;
+        border: 1px solid rgba(128, 128, 128, 0.273);
         padding: 10px;
-        .link{
-            font-weight: 600;
-            &:hover{
-                color: blue;
-            }
-        }
-    }
-    .header-top-right{
-        flex: 1;
-        ul{
-            display: flex;
-            align-items: center;
-            height: 100%;
-            width: 100%;
-            justify-content: space-between;
-            
-        }
-
-        .header-btn-login{
-            @extend .header-btn; 
-            background-color: rgb(43, 43, 136);
-            .link{
-                color: white;
-                font-weight: bold;
-            }
-            &:hover{
-                background-color: rgb(63, 63, 150);
-            }
-        }
-
-        .header-btn-register{
-            @extend .header-btn; 
-            background-color: rgb(186, 64, 19);
-            .link{
-                color: white;
-                font-weight: bold;
-            }
-
-            &:hover{
-                background-color: rgb(194, 91, 54);
-            }
-        }
-    }
-
-    .header-body{
-        width: 100%;
-        height: max-content;
-        background-color: #F2F3F3;
-        margin-top: 10px;
+        outline: none;
         border-radius: 5px;
-        display: flex;
-        justify-content: center;
-        align-items: center;
-        form{
-            display: flex;
-            width: 1310px;
-            height: max-content;
-            justify-content: space-between;
-            align-items: center;
-            position: relative;
-            padding: 5px;
-            border-radius: 5px;
-            input{
-                width:1300px;
-                height: 45px;
-                border: 1px solid rgba(128, 128, 128, 0.273);
-                padding: 10px;
-                outline: none;
-                border-radius: 5px; 
-                font-size: 15px;
-              
-                &:focus{
-                    border: 1px solid rgba(0, 0, 255, 0.64); 
-                }
-            }
-            button{
-              @extend .header-btn; 
-              color: gray;
-              font-size: 20px;
-              position: absolute;
-              right: 20px;
-            }
+        font-size: 15px;
+
+        &:focus {
+          border: 1px solid rgba(0, 0, 255, 0.64);
         }
+      }
+      button {
+        @extend .header-btn;
+        color: gray;
+        font-size: 20px;
+        position: absolute;
+        right: 20px;
+      }
     }
+  }
 }
