--- a/src/components/travelList/travelList.scss
+++ b/src/components/travelList/travelList.scss
@@ -1,22 +1,23 @@
 .travel-list-container{
     width: 100%;
-    height: 500px;
+    height: auto;
     background-color: rgba(216, 112, 147, 0.333);
     display: flex;
     flex-direction: column;
+    padding: 20px 0;
     align-items: center;
     h1{
         margin-top: 10px;
     }
     .hr{
-        width: 220px;
+        width: 280px;
         height: 3px;
         background-color: #333;
         margin-top: 5px;
     }
     .travel-list-item{
         width: 1300px;
-        height: 500px;
+        height: auto;
         background-color: #eee;
         margin-top: 20px;
         border-radius: 5px;
@@ -32,11 +33,13 @@
                     border-bottom: 3px solid blue;
                     cursor: pointer;
                     font-weight: bold;
-                    &:hover{
-                        color: orangered;
-                    }
+                   
                 }
             }
+        }
+        .travel-list{
+            display: flex;
+            flex-wrap: wrap;
         }
     }
 }
