--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,7 @@
+@import "../responsive";
+
+
+
 .App {
   width: 100%;
   height: auto;
@@ -8,6 +12,55 @@
   position: relative;
 }
 
+.sidebar{
+  position: fixed;
+  transform: translateX(-100%);
+  right: 0;
+  left: 0;
+  bottom: 0;
+  transition: all 1s ease;
+  top: 0;
+  z-index: 99999999999999;
+  .remove-manu-icon{
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    cursor: pointer;
+    color: black;
+    font-size: 25px;
+  }
+  ul{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #EEE;
+    li{
+      height: 45px;
+      margin-top: 30px;
+      width: 100%;
+      cursor: pointer;
+      font-weight: bold;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      a:hover{
+        color: red;
+      }
+    }
+    .user-container{
+      height: max-content;
+      li{
+        display: flex;
+        width: 100%;
+        height: 45px;
+        justify-content: center;
+        align-items: center;
+      }
+    }
+  }
+}
 
 .app-container{
   width: 100%;
