--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -1,4 +1,18 @@
+@import "../../../responsive";
 .footer-container{
+    @include mobile{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    @include tablet{
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
     width: 100%;
     height: max-content;
     background-color: #333;
@@ -8,6 +22,18 @@
 
     .footer-item{
         width: 1300px;
+        @include mobile{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+        @include tablet{
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
         display: flex;
         align-items: center;
         min-height: 300px;
