--- a/src/components/travel/travel.scss
+++ b/src/components/travel/travel.scss
@@ -1,4 +1,8 @@
+@import '../../../responsive'; 
 .travel-container{
+    @include mobile{
+        width: 100%;
+    }
     width: 315px;
     height: auto;
     margin-top: 20px;
@@ -12,6 +16,9 @@
     align-items: center;
     border: 0.4px solid rgba(128, 128, 128, 0.229);
     img{
+        @include mobile{
+            width: 315px;
+        }
         width: 100%;
         height: 250px;
         border-radius: 5px;
