--- a/src/components/travelCate/travelCate.scss
+++ b/src/components/travelCate/travelCate.scss
@@ -1,4 +1,13 @@
+@import "../../../responsive";
 .travel-cate-container{
+    @include mobile{
+        flex-direction: column;
+    }
+
+    @include tablet{
+        flex-direction: column;
+        align-items: center;
+    }
     margin-top: 30px;
     width: 100%;
     height: auto;
