--- a/src/pages/categorydetails/categoryDetails.scss
+++ b/src/pages/categorydetails/categoryDetails.scss
@@ -1,3 +1,4 @@
+@import "../../../responsive";
 .category-details-container{
     width:100%;
     height: auto;
@@ -17,9 +18,23 @@
         flex-direction: column;
         align-items: center;
         padding-bottom: 30px;
+        @include mobile{
+            width: 100%;
+        }
+
+        @include tablet{
+            width: 100%;
+        }
     }
 
     .category-details-main{
+        @include mobile{
+            width: 100%;
+        }
+
+        @include tablet{
+            width: 100%;
+        }
         width: 1300px;
         display: flex;
         flex-direction: row;
@@ -33,6 +48,13 @@
             height: auto;
             display: flex; 
             flex-direction: column;
+            @include mobile{
+                display: none;
+            }
+
+            @include tablet{
+                display: none;
+            }
             h2,h3{
                 font-weight: 500;
             }
@@ -60,19 +82,42 @@
                 display: flex;
                 justify-content: center;
                 align-items: center;
+               
                 ul{
+                    @include mobile{
+                        width: 100%;
+                        font-size: 10px;
+                        padding: 0 5px;
+                    }
+
+                    @include mobile{
+                        width: 100%;
+                        font-size: 15px;
+                        padding: 0 5px;
+                    }
                     display: flex;
                     align-items: center;
                     width: 100%;
                     height: max-content;
-    
+
                     li{
+                        @include mobile{
+                            width: 100px;
+                            font-size: 12px;
+                            font-weight: bold;
+                        }
+                        @include tablet{
+                            width: 100px;
+                            font-size: 15px;
+                            font-weight: bold;
+                        }
                         margin-left: 30px;
                         width: 200px;
                         height: 40px;
                         padding: 10px;
                         color: black;
                         background: none;
+                        
                         cursor: pointer;
                         border-radius: 5px;
                         display: flex;
