--- a/src/pages/userOrder/userOrder.scss
+++ b/src/pages/userOrder/userOrder.scss
@@ -1,3 +1,5 @@
+@import "../../../responsive";
+
 .user-order-container{
     width: 1300px;
     min-height: 500px;
@@ -7,11 +9,21 @@
     align-items: center;
     flex-direction: column;
     margin-bottom: 30px;
+    @include mobile{
+      width: 100%;
+      font-size: 10px;
+    }
+
+    @include tablet{
+      width: 100%;
+      font-size: 10px;
+    }
 }
 
 
 
 #customers {
+    text-align: center;
     font-family: Arial, Helvetica, sans-serif;
     border-collapse: collapse;
     width: 100%;
@@ -28,6 +40,15 @@
       color: white;
       width: 220px;
       margin-left: 20px;
+      @include mobile{
+        width: 110px;
+        font-size: 15px;
+      }
+
+      @include tablet{
+        width: 110px;
+        font-size: 15px;
+      }
     }
   }
   
