--- a/src/pages/categorydetails/categoryDetails.scss
+++ b/src/pages/categorydetails/categoryDetails.scss
@@ -78,6 +78,9 @@
             min-height: 500px;
             display: flex;
             flex-direction: column;
+            @include mobile{
+                width: 100%;
+            }
             .category-sort{
                 display: flex;
                 justify-content: center;
@@ -90,7 +93,7 @@
                         padding: 0 5px;
                     }
 
-                    @include mobile{
+                    @include tablet{
                         width: 100%;
                         font-size: 15px;
                         padding: 0 5px;
