--- a/src/components/featured/featured.scss
+++ b/src/components/featured/featured.scss
@@ -10,7 +10,12 @@
     flex-direction: column;
     position: relative;
     @include mobile{
-        display: none;
+        width: 100%;;
+        height: 500px;
+        object-fit: cover;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     img{
@@ -19,6 +24,13 @@
     }
 
     .featured-introduct{
+        @include mobile{
+            width: 250px;
+            height: 250px;
+            font-size: 10px;
+            align-self: center;
+            transform: translateX(-50%);
+        }
         @include tablet{
             width: 300px;
             height: 300px;
@@ -44,6 +56,13 @@
                 width: 110px;
                 font-size: 15px;
                 padding: 0 5px;
+            }
+
+            @include mobile{
+                width: 110px;
+                font-size: 10px;
+                padding: 0 5px;
+                height: 35px;
             }
             width: 220px;
             height: 55px;
