--- a/src/pages/order/order.scss
+++ b/src/pages/order/order.scss
@@ -3,13 +3,11 @@
     height: auto;
     display: flex;
     justify-content: center;
-
     margin-top: 120px;
     padding: 10px;
     .order-item{
         display: flex;
         flex-direction: column;
-        margin-top: 30px;
         width: 650px;
         height: auto;
         padding: 10px;
@@ -226,7 +224,7 @@
                     button{
                         width: 100%;
                         height: 45px;
-                        background-color: orange;
+                        background-color: rgba(0, 0, 255, 0.624);;
                         border: none;
                         border-radius: 5px;
                         font-weight: bold;
@@ -234,7 +232,7 @@
                         cursor: pointer;
                         color: white;
                         &:hover{
-                            background-color: rgba(255, 166, 0, 0.814);
+                            background-color: rgba(0, 0, 255, 0.824);
                         }
                     }
                 }
